# cocktail_finder

./: dev.docker-compose.yml
backend/: .gitignore  alembic.ini  pyproject.toml
backend/.envs/: .env.fastapi.example  .env.postgres.example
backend/alembic/: env.py
backend/alembic/versions/: 2024-03-03_user_model.py  2024-03-17_cocktail_image_rating_tag.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: __init__.py  dependencies.py  mixins.py  models.py  session_manager.py
backend/app/modules/auth/: config.py  constants.py  dependencies.py  exceptions.py  oauth2.py  routes.py  security.py  services.py
backend/app/modules/cocktail/: schemas.py
backend/app/modules/cocktail/models/: __init__.py  cocktail.py  cocktail_image.py  cocktail_rating.py  cocktail_tag.py  tag.py
backend/app/modules/user/: routes.py  schemas.py
backend/app/modules/user/models/: user.py
backend/docker/: dev.Dockerfile
backend/requirements/: dev.requirements.txt  prod.requirements.txt
backend/scripts/: downgrade.sh  format.sh  lint.sh  makemigrations.sh  migrate.sh
scripts/: build-dev.sh  up-dev.sh
