[project]
requires-python = ">=3.12"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
extend-select = [
    "I", # imports
    "Q", # quotes
    "E501", # line length
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"
